--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 .idea/.idea.collection_game/.idea/workspace.xml
 .idea/.idea.collection_game/.idea/projectSettingsUpdater.xml
+.idea/.idea.collection_game/.idea/indexLayout.xml
