--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ crashlytics-build.properties
 .idea/.idea.collection_game/.idea/workspace.xml
 .idea/.idea.collection_game/.idea/projectSettingsUpdater.xml
 .idea/.idea.collection_game/.idea/indexLayout.xml
+.idea/.idea.collection_game/.idea/vcs.xml
